[package]
name = "jarvis-rust"
version = "0.1.0"
edition = "2021"
authors = ["jinfagang19@163.com"]
description = "An intelligent assistant in pure rust."
documentation = "https://docs.rs/bitflags"
readme = "README.md"
license = "GPL-2.0-or-later WITH Bison-exception-2.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]


[[bin]]
name = "jarvis"
path = "src/main.rs"